--- a/week01/media-query.html
+++ b/week01/media-query.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 230 - Media Query Example</title>
     <meta name="description" content="Media query learning activity example page.">
-    <meta name="author" content="https://fonts.googleapis.com">
+    <meta name="author" content="Cassie Escujuri">
+    <link rel="preconnect" content="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/media-query.css">
