--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en-US">
 <head>
-    <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cassie Escujuri - WDD 230 - Web Frontend Development</title>
-    <meta name='description' content='WDD 230 - Web Frontend Development - Cassie Escujuri - course assignment portal'>
-    <meta name='author' content='Cassie Escujuri'>
-    <link rel='preconnect' href='https://fonts.googleapis.com'>
-    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
-    <link href='https://fonts.googleapis.com/css2?family=Roboto&display=swap' rel='stylesheet'>
-    <link rel='stylesheet' href='styles/base.css'>
-    <link rel='stylesheet' href='styles/larger.css'>
+    <meta name="description" content="WDD 230 - Web Frontend Development - Cassie Escujuri - course assignment portal">
+    <meta name="author" content="Cassie Escujuri">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
 <body>
     <header>
