--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
-                <li>Week 01:<a href=""></a></li>
-                <li>Week 02:<a href=""></a></li>
-                <li>Week 03:<a href=""></a></li>
-                <li>Week 04:<a href=""></a></li>
-                <li>Week 05:<a href=""></a></li>
-                <li>Week 06:<a href=""></a></li>
+                <li>Week 01: <a href=""></a></li>
+                <li>Week 02: <a href="week02/design.html">Design</a></li>
+                <li>Week 03: <a href=""></a></li>
+                <li>Week 04: <a href=""></a></li>
+                <li>Week 05: <a href=""></a></li>
+                <li>Week 06: <a href=""></a></li>
             </ul>
         </section>
         <section class="card">
