social media meta tags

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
+    <meta property="og:title" content="WDD 230 - Home Page"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://cmescujuri.github.io/wdd230/"/>
+    <meta property="og:image" content="https://images.ctfassets.net/0wjmk6wgfops/Ssn5fPz0jalip5fVORErk/6ff7978d2c9f6b9a28beae878d23479a/Downtown_Provo_web_opt_5e3d7617-06ba-43df-97ac-a9758d973a3b.jpg"/>
 </head>
 <body>
     <header>
