--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -43,7 +43,7 @@
 
 
       <h3>
-        Color Palette
+        Color Schema
       </h3>
       
       Palette URL: <a href="https://coolors.co/palette/3a201f-1a1f1b-d8d9d4-c29b93" target="_blank">https://coolors.co/aa571d-755440-422818-d9c6b7</a>
