--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h2>Learning Activities</h2>
             <ul>
                 <li>Week 01: <a href=""></a></li>
-                <li>Week 02: <a href="week02/design.html">Design</a> | <a href="https://codepen.io/Cass-Escujuri/pen/eYoaLOB?editors=0100">Hamburger</a></li>
+                <li>Week 02: <a href="week02/design.html">Design</a> | <a href="https://codepen.io/Cass-Escujuri/pen/eYoaLOB?editors=0100">Hamburger</a> | <a href="week02/bom.html">BOM App</a></li>
                 <li>Week 03: <a href=""></a></li>
                 <li>Week 04: <a href=""></a></li>
                 <li>Week 05: <a href=""></a></li>
